adds more phlex snippets

--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "front-on-rails",
   "displayName": "Front on Rails",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fagnerpereira/front-on-rails"
+  },
+  "publisher": "FagnerRosa",
   "engines": {
     "vscode": "^1.90.0"
   },
